parser/yammmgrammar_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // YammmGrammar
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type YammmGrammarParser struct {
	*antlr.BaseParser
}

var yammmgrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func yammmgrammarParserInit() {
	staticData := &yammmgrammarParserStaticData
	staticData.literalNames = []string{
		"", "'schema'", "'abstract'", "'part'", "'type'", "'extends'", "'primary'",
		"'required'", "'one'", "'many'", "'Integer'", "'Float'", "'Boolean'",
		"'String'", "'Enum'", "'Pattern'", "'Timestamp'", "'Spacevector'", "'Date'",
		"'UUID'", "'in'", "'datatype'", "'includes'", "'{'", "'}'", "'['", "']'",
		"'('", "')'", "':'", "','", "'='", "'-->'", "'*->'", "'->'", "'/'",
		"'_'", "'*'", "'@'", "'!'", "'+'", "'-'", "'||'", "'&&'", "'=='", "'!='",
		"'=~'", "'!~'", "'?'", "'>'", "'>='", "'<'", "'<='", "'$'", "'|'", "'.'",
		"'%'", "'^'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAR",
		"RPAR", "COLON", "COMMA", "EQUALS", "ASSOC", "COMP", "ARROW", "SLASH",
		"USCORE", "STAR", "AT", "EXCLAMATION", "PLUS", "MINUS", "OR", "AND",
		"EQUAL", "NOTEQUAL", "MATCH", "NOTMATCH", "QMARK", "GT", "GTE", "LT",
		"LTE", "DOLLAR", "PIPE", "PERIOD", "PERCENT", "HAT", "STRING", "DOC_COMMENT",
		"SL_COMMENT", "REGEXP", "WS", "VARIABLE", "INTEGER", "FLOAT", "BOOLEAN",
		"UC_WORD", "LC_WORD", "ANY_OTHER",
	}
	staticData.ruleNames = []string{
		"schema", "schema_name", "type", "datatype", "type_name", "plural_name",
		"extends_types", "type_body", "property", "rel_property", "property_name",
		"data_type_ref", "alias", "association", "composition", "any_name",
		"multiplicity", "relation_body", "built_in", "integerT", "floatT", "boolT",
		"stringT", "enumT", "patternT", "timestampT", "spacevectorT", "dateT",
		"uuidT", "datatypeKeyword", "invariant", "expr", "arguments", "parameters",
		"literal", "lc_keyword",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// YammmGrammarParserInit initializes any static state used to implement YammmGrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewYammmGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func YammmGrammarParserInit() {
	staticData := &yammmgrammarParserStaticData
	staticData.once.Do(yammmgrammarParserInit)
}

// NewYammmGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewYammmGrammarParser(input antlr.TokenStream) *YammmGrammarParser {
	YammmGrammarParserInit()
	this := new(YammmGrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &yammmgrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// YammmGrammarParser tokens.
const (
	YammmGrammarParserEOF         = antlr.TokenEOF
	YammmGrammarParserT__0        = 1
	YammmGrammarParserT__1        = 2
	YammmGrammarParserT__2        = 3
	YammmGrammarParserT__3        = 4
	YammmGrammarParserT__4        = 5
	YammmGrammarParserT__5        = 6
	YammmGrammarParserT__6        = 7
	YammmGrammarParserT__7        = 8
	YammmGrammarParserT__8        = 9
	YammmGrammarParserT__9        = 10
	YammmGrammarParserT__10       = 11
	YammmGrammarParserT__11       = 12
	YammmGrammarParserT__12       = 13
	YammmGrammarParserT__13       = 14
	YammmGrammarParserT__14       = 15
	YammmGrammarParserT__15       = 16
	YammmGrammarParserT__16       = 17
	YammmGrammarParserT__17       = 18
	YammmGrammarParserT__18       = 19
	YammmGrammarParserT__19       = 20
	YammmGrammarParserT__20       = 21
	YammmGrammarParserT__21       = 22
	YammmGrammarParserLBRACE      = 23
	YammmGrammarParserRBRACE      = 24
	YammmGrammarParserLBRACK      = 25
	YammmGrammarParserRBRACK      = 26
	YammmGrammarParserLPAR        = 27
	YammmGrammarParserRPAR        = 28
	YammmGrammarParserCOLON       = 29
	YammmGrammarParserCOMMA       = 30
	YammmGrammarParserEQUALS      = 31
	YammmGrammarParserASSOC       = 32
	YammmGrammarParserCOMP        = 33
	YammmGrammarParserARROW       = 34
	YammmGrammarParserSLASH       = 35
	YammmGrammarParserUSCORE      = 36
	YammmGrammarParserSTAR        = 37
	YammmGrammarParserAT          = 38
	YammmGrammarParserEXCLAMATION = 39
	YammmGrammarParserPLUS        = 40
	YammmGrammarParserMINUS       = 41
	YammmGrammarParserOR          = 42
	YammmGrammarParserAND         = 43
	YammmGrammarParserEQUAL       = 44
	YammmGrammarParserNOTEQUAL    = 45
	YammmGrammarParserMATCH       = 46
	YammmGrammarParserNOTMATCH    = 47
	YammmGrammarParserQMARK       = 48
	YammmGrammarParserGT          = 49
	YammmGrammarParserGTE         = 50
	YammmGrammarParserLT          = 51
	YammmGrammarParserLTE         = 52
	YammmGrammarParserDOLLAR      = 53
	YammmGrammarParserPIPE        = 54
	YammmGrammarParserPERIOD      = 55
	YammmGrammarParserPERCENT     = 56
	YammmGrammarParserHAT         = 57
	YammmGrammarParserSTRING      = 58
	YammmGrammarParserDOC_COMMENT = 59
	YammmGrammarParserSL_COMMENT  = 60
	YammmGrammarParserREGEXP      = 61
	YammmGrammarParserWS          = 62
	YammmGrammarParserVARIABLE    = 63
	YammmGrammarParserINTEGER     = 64
	YammmGrammarParserFLOAT       = 65
	YammmGrammarParserBOOLEAN     = 66
	YammmGrammarParserUC_WORD     = 67
	YammmGrammarParserLC_WORD     = 68
	YammmGrammarParserANY_OTHER   = 69
)

// YammmGrammarParser rules.
const (
	YammmGrammarParserRULE_schema          = 0
	YammmGrammarParserRULE_schema_name     = 1
	YammmGrammarParserRULE_type            = 2
	YammmGrammarParserRULE_datatype        = 3
	YammmGrammarParserRULE_type_name       = 4
	YammmGrammarParserRULE_plural_name     = 5
	YammmGrammarParserRULE_extends_types   = 6
	YammmGrammarParserRULE_type_body       = 7
	YammmGrammarParserRULE_property        = 8
	YammmGrammarParserRULE_rel_property    = 9
	YammmGrammarParserRULE_property_name   = 10
	YammmGrammarParserRULE_data_type_ref   = 11
	YammmGrammarParserRULE_alias           = 12
	YammmGrammarParserRULE_association     = 13
	YammmGrammarParserRULE_composition     = 14
	YammmGrammarParserRULE_any_name        = 15
	YammmGrammarParserRULE_multiplicity    = 16
	YammmGrammarParserRULE_relation_body   = 17
	YammmGrammarParserRULE_built_in        = 18
	YammmGrammarParserRULE_integerT        = 19
	YammmGrammarParserRULE_floatT          = 20
	YammmGrammarParserRULE_boolT           = 21
	YammmGrammarParserRULE_stringT         = 22
	YammmGrammarParserRULE_enumT           = 23
	YammmGrammarParserRULE_patternT        = 24
	YammmGrammarParserRULE_timestampT      = 25
	YammmGrammarParserRULE_spacevectorT    = 26
	YammmGrammarParserRULE_dateT           = 27
	YammmGrammarParserRULE_uuidT           = 28
	YammmGrammarParserRULE_datatypeKeyword = 29
	YammmGrammarParserRULE_invariant       = 30
	YammmGrammarParserRULE_expr            = 31
	YammmGrammarParserRULE_arguments       = 32
	YammmGrammarParserRULE_parameters      = 33
	YammmGrammarParserRULE_literal         = 34
	YammmGrammarParserRULE_lc_keyword      = 35
)

// ISchemaContext is an interface to support dynamic dispatch.
type ISchemaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSchemaContext differentiates from other interfaces.
	IsSchemaContext()
}

type SchemaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySchemaContext() *SchemaContext {
	var p = new(SchemaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YammmGrammarParserRULE_schema
	return p
}

func (*SchemaContext) IsSchemaContext() {}

func NewSchemaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SchemaContext {
	var p = new(SchemaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YammmGrammarParserRULE_schema

	return p
}

func (s *SchemaContext) GetParser() antlr.Parser { return s.parser }

func (s *SchemaContext) Schema_name() ISchema_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISchema_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISchema_nameContext)
}

func (s *SchemaContext) EOF() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserEOF, 0)
}

func (s *SchemaContext) AllType_() []ITypeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypeContext); ok {
			len++
		}
	}

	tst := make([]ITypeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypeContext); ok {
			tst[i] = t.(ITypeContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Type_(i int) ITypeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *SchemaContext) AllDatatype() []IDatatypeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDatatypeContext); ok {
			len++
		}
	}

	tst := make([]IDatatypeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDatatypeContext); ok {
			tst[i] = t.(IDatatypeContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Datatype(i int) IDatatypeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDatatypeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDatatypeContext)
}

func (s *SchemaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SchemaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SchemaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.EnterSchema(s)
	}
}

func (s *SchemaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.ExitSchema(s)
	}
}

func (s *SchemaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YammmGrammarVisitor:
		return t.VisitSchema(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YammmGrammarParser) Schema() (localctx ISchemaContext) {
	this := p
	_ = this

	localctx = NewSchemaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, YammmGrammarParserRULE_schema)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Schema_name()
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&576460752303423516) != 0 {
		p.SetState(75)
		p.GetErrorHandler().Sync(p)
		switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(73)
				p.Type_()
			}

		case 2:
			{
				p.SetState(74)
				p.Datatype()
			}

		}

		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(80)
		p.Match(YammmGrammarParserEOF)
	}

	return localctx
}

// ISchema_nameContext is an interface to support dynamic dispatch.
type ISchema_nameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSchema_nameContext differentiates from other interfaces.
	IsSchema_nameContext()
}

type Schema_nameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySchema_nameContext() *Schema_nameContext {
	var p = new(Schema_nameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YammmGrammarParserRULE_schema_name
	return p
}

func (*Schema_nameContext) IsSchema_nameContext() {}

func NewSchema_nameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Schema_nameContext {
	var p = new(Schema_nameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YammmGrammarParserRULE_schema_name

	return p
}

func (s *Schema_nameContext) GetParser() antlr.Parser { return s.parser }

func (s *Schema_nameContext) STRING() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserSTRING, 0)
}

func (s *Schema_nameContext) DOC_COMMENT() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserDOC_COMMENT, 0)
}

func (s *Schema_nameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Schema_nameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Schema_nameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.EnterSchema_name(s)
	}
}

func (s *Schema_nameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.ExitSchema_name(s)
	}
}

func (s *Schema_nameContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YammmGrammarVisitor:
		return t.VisitSchema_name(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YammmGrammarParser) Schema_name() (localctx ISchema_nameContext) {
	this := p
	_ = this

	localctx = NewSchema_nameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, YammmGrammarParserRULE_schema_name)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == YammmGrammarParserDOC_COMMENT {
		{
			p.SetState(82)
			p.Match(YammmGrammarParserDOC_COMMENT)
		}

	}
	{
		p.SetState(85)
		p.Match(YammmGrammarParserT__0)
	}
	{
		p.SetState(86)
		p.Match(YammmGrammarParserSTRING)
	}

	return localctx
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetIs_abstract returns the is_abstract token.
	GetIs_abstract() antlr.Token

	// GetIs_part returns the is_part token.
	GetIs_part() antlr.Token

	// SetIs_abstract sets the is_abstract token.
	SetIs_abstract(antlr.Token)

	// SetIs_part sets the is_part token.
	SetIs_part(antlr.Token)

	// IsTypeContext differentiates from other interfaces.
	IsTypeContext()
}

type TypeContext struct {
	*antlr.BaseParserRuleContext
	parser      antlr.Parser
	is_abstract antlr.Token
	is_part     antlr.Token
}

func NewEmptyTypeContext() *TypeContext {
	var p = new(TypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YammmGrammarParserRULE_type
	return p
}

func (*TypeContext) IsTypeContext() {}

func NewTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeContext {
	var p = new(TypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YammmGrammarParserRULE_type

	return p
}

func (s *TypeContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeContext) GetIs_abstract() antlr.Token { return s.is_abstract }

func (s *TypeContext) GetIs_part() antlr.Token { return s.is_part }

func (s *TypeContext) SetIs_abstract(v antlr.Token) { s.is_abstract = v }

func (s *TypeContext) SetIs_part(v antlr.Token) { s.is_part = v }

func (s *TypeContext) Type_name() IType_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_nameContext)
}

func (s *TypeContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserLBRACE, 0)
}

func (s *TypeContext) Type_body() IType_bodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_bodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_bodyContext)
}

func (s *TypeContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserRBRACE, 0)
}

func (s *TypeContext) DOC_COMMENT() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserDOC_COMMENT, 0)
}

func (s *TypeContext) Extends_types() IExtends_typesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExtends_typesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExtends_typesContext)
}

func (s *TypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.EnterType(s)
	}
}

func (s *TypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.ExitType(s)
	}
}

func (s *TypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case YammmGrammarVisitor:
		return t.VisitType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *YammmGrammarParser) Type_() (localctx ITypeContext) {
	this := p
	_ = this

	localctx = NewTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, YammmGrammarParserRULE_type)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == YammmGrammarParserDOC_COMMENT {
		{
			p.SetState(88)
			p.Match(YammmGrammarParserDOC_COMMENT)
		}

	}
	p.SetState(93)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case YammmGrammarParserT__1:
		{
			p.SetState(91)

			var _m = p.Match(YammmGrammarParserT__1)

			localctx.(*TypeContext).is_abstract = _m
		}

	case YammmGrammarParserT__2:
		{
			p.SetState(92)

			var _m = p.Match(YammmGrammarParserT__2)

			localctx.(*TypeContext).is_part = _m
		}

	case YammmGrammarParserT__3:

	default:
	}
	{
		p.SetState(95)
		p.Match(YammmGrammarParserT__3)
	}
	{
		p.SetState(96)
		p.Type_name()
	}
	p.SetState(98)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == YammmGrammarParserT__4 {
		{
			p.SetState(97)
			p.Extends_types()
		}

	}
	{
		p.SetState(100)
		p.Match(YammmGrammarParserLBRACE)
	}
	{
		p.SetState(101)
		p.Type_body()
	}
	{
		p.SetState(102)
		p.Match(YammmGrammarParserRBRACE)
	}

	return localctx
}

// IDatatypeContext is an interface to support dynamic dispatch.
type IDatatypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDatatypeContext differentiates from other interfaces.
	IsDatatypeContext()
}

type DatatypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDatatypeContext() *DatatypeContext {
	var p = new(DatatypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = YammmGrammarParserRULE_datatype
	return p
}

func (*DatatypeContext) IsDatatypeContext() {}

func NewDatatypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DatatypeContext {
	var p = new(DatatypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = YammmGrammarParserRULE_datatype

	return p
}

func (s *DatatypeContext) GetParser() antlr.Parser { return s.parser }

func (s *DatatypeContext) Type_name() IType_nameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_nameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_nameContext)
}

func (s *DatatypeContext) EQUALS() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserEQUALS, 0)
}

func (s *DatatypeContext) Built_in() IBuilt_inContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBuilt_inContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBuilt_inContext)
}

func (s *DatatypeContext) DOC_COMMENT() antlr.TerminalNode {
	return s.GetToken(YammmGrammarParserDOC_COMMENT, 0)
}

func (s *DatatypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DatatypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DatatypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.EnterDatatype(s)
	}
}

func (s *DatatypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(YammmGrammarListener); ok {
		listenerT.ExitDatatype(s)
	}
}
